--- a/index.html
+++ b/index.html
@@ -9087,7 +9087,7 @@
                     <div id="w-pdl931a6" class="com-text-block p-absolute is-animation">
                         <div class="text-block">
                             <p class="text-block-css full-width" style="font-family: Times New Roman, Times, serif;">
-                                Tại gia đình nhà trai<br />Thôn Văn Lãng, Xã Phú Xuyên, Hà Nội</p>
+                                Tại gia đình nhà gái<br />Khu Thượng Đồng, phường Kinh Bắc, Bắc Ninh</p>
                         </div>
                     </div>
                     <div id="w-k8kl83qy" class="com-text-block p-absolute is-animation">
